force-app/main/default/objects/CC_Caracteristica__c/CC_Caracteristica__c.object-meta.xml
<CustomObject>
    <label>Característica</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Características</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>