force-app/main/default/objects/CC_Caracteristica__c/fields/CC_Avisar_agente__c.field-meta.xml
<CustomField>
    <fullName>CC_Avisar_agente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avisar a agente</label>
    <type>Checkbox</type>
</CustomField>