force-app/main/default/objects/CC_Caracteristica__c/fields/CC_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>CC_Descripcion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descripción</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>