force-app/main/default/objects/CC_Caracteristica__c/fields/CC_Dias_ultima_asociacion__c.field-meta.xml
<CustomField>
    <fullName>CC_Dias_ultima_asociacion__c</fullName>
    <formula>IF(RecordType.Name = &quot;Marca&quot; &amp;&amp;  CC_Activo__c = true &amp;&amp; ISBLANK(CC_Fecha_ultima_asociacion_marca__c) ,TODAY() - DATEVALUE(CC_Fecha_vigencia_inicio__c), TODAY() - DATEVALUE( CC_Fecha_ultima_asociacion_marca__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días desde la última asociación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>