force-app/main/default/objects/CC_Caracteristica__c/fields/CC_Fecha_ultima_asociacion_marca__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_ultima_asociacion_marca__c</fullName>
    <label>Fecha de última asociación marca</label>
    <summarizedField>CC_Marca_Case__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>CC_Marca_Case__c.CC_Marca__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>