force-app/main/default/objects/CC_Caracteristica__c/fields/CC_Fecha_vigencia_inicio__c.field-meta.xml
<CustomField>
    <fullName>CC_Fecha_vigencia_inicio__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha vigencia inicio</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>