force-app/main/default/objects/CC_Caracteristica__c/fields/CC_Numero_Asignaciones__c.field-meta.xml
<CustomField>
    <fullName>CC_Numero_Asignaciones__c</fullName>
    <description>Número de asignaciones (cuentas o contactos) que tiene la característica.</description>
    <label>Nº de asignaciones</label>
    <summaryForeignKey>CC_Caracteristica_Detalle__c.CC_Caracteristica__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>