force-app/main/default/objects/CC_Caracteristica__c/fields/CC_RestriccionTotal__c.field-meta.xml
<CustomField>
    <fullName>CC_RestriccionTotal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para poder señalar si una característica tiene Restricción Total o no.</description>
    <label>Restricción total</label>
    <type>Checkbox</type>
</CustomField>