force-app/main/default/objects/CC_Caracteristica__c/recordTypes/CC_Campana.recordType-meta.xml
<RecordType>
    <fullName>CC_Campana</fullName>
    <active>true</active>
    <label>Campaña</label>
</RecordType>