force-app/main/default/objects/CC_Caracteristica__c/recordTypes/CC_Centro_CaixaBank.recordType-meta.xml
<RecordType>
    <fullName>CC_Centro_CaixaBank</fullName>
    <active>true</active>
    <label>Característica de Centro CaixaBank</label>
</RecordType>