force-app/main/default/objects/CC_Caracteristica__c/recordTypes/CC_Cliente_Contacto.recordType-meta.xml
<RecordType>
    <fullName>CC_Cliente_Contacto</fullName>
    <active>true</active>
    <label>Característica de Cliente (Contacto)</label>
</RecordType>