force-app/main/default/objects/CC_Caracteristica__c/recordTypes/CC_Cliente_Cuenta.recordType-meta.xml
<RecordType>
    <fullName>CC_Cliente_Cuenta</fullName>
    <active>true</active>
    <label>Característica de Cliente (Cuenta)</label>
</RecordType>