force-app/main/default/objects/CC_Caracteristica__c/recordTypes/CC_Empleado.recordType-meta.xml
<RecordType>
    <fullName>CC_Empleado</fullName>
    <active>true</active>
    <label>Característica de Empleado</label>
</RecordType>