force-app/main/default/objects/CC_Caracteristica__c/recordTypes/SAC_CaracteristicaClienteCuenta.recordType-meta.xml
<RecordType>
    <fullName>SAC_CaracteristicaClienteCuenta</fullName>
    <active>true</active>
    <description>Record Type para la creación de características de clientes (cuenta) de SAC</description>
    <label>Característica de Cliente (Cuenta) SAC</label>
</RecordType>