force-app/main/default/objects/CC_Caracteristica__c/recordTypes/SAC_CaracteristicaRepresentante.recordType-meta.xml
<RecordType>
    <fullName>SAC_CaracteristicaRepresentante</fullName>
    <active>true</active>
    <description>Record Type para la creación de características de representantes de SAC</description>
    <label>Característica de representante SAC</label>
</RecordType>