force-app/main/default/objects/CC_Caracteristica__c/recordTypes/SEG_Caracteristicacaso.recordType-meta.xml
<RecordType>
    <fullName>SEG_Caracteristicacaso</fullName>
    <active>true</active>
    <label>Característica de un caso</label>
</RecordType>