force-app/main/default/objects/CC_Caracteristica__c/listViews/Caracteristicas_FRA_de_Contactos.listView-meta.xml
<ListView>
    <fullName>Caracteristicas_FRA_de_Contactos</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OS_Negocio__c</field>
        <operation>equals</operation>
        <value>FRA</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Caracteristica__c.CC_Cliente_Contacto</value>
    </filters>
    <label>Características FRA de Contactos</label>
    <sharedTo>
        <role>FRA</role>
    </sharedTo>
</ListView>