force-app/main/default/objects/CC_Caracteristica__c/listViews/CC_Campanas.listView-meta.xml
<ListView>
    <fullName>CC_Campanas</fullName>
    <columns>NAME</columns>
    <columns>CC_Fecha_vigencia_inicio__c</columns>
    <columns>CC_Fecha_vigencia_fin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Caracteristica__c.CC_Campana</value>
    </filters>
    <label>Campañas</label>
    <sharedTo>
        <role>Contact_Center</role>
        <role>Contact_Center_sin_acceso_a_Directorio</role>
    </sharedTo>
</ListView>