force-app/main/default/objects/CC_Caracteristica__c/listViews/CSBD_Marca_de_una_oportunidad_Now_In_Sales.listView-meta.xml
<ListView>
    <fullName>CSBD_Marca_de_una_oportunidad_Now_In_Sales</fullName>
    <columns>NAME</columns>
    <columns>CC_Descripcion__c</columns>
    <columns>OS_Negocio__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CC_Activo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OS_Negocio__c</field>
        <operation>equals</operation>
        <value>CSBD</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Caracteristica__c.Marca</value>
    </filters>
    <label>Marcas de una oportunidad CSBD</label>
    <sharedTo>
        <group>CSBD_General</group>
    </sharedTo>
</ListView>