force-app/main/default/objects/CC_Caracteristica__c/listViews/HDT_caracteristicas.listView-meta.xml
<ListView>
    <fullName>HDT_caracteristicas</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OS_Negocio__c</field>
        <operation>equals</operation>
        <value>HDT</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Caracteristica__c.CC_Empleado</value>
    </filters>
    <label>HDT Características</label>
    <sharedTo>
        <role>HDT</role>
    </sharedTo>
</ListView>