force-app/main/default/objects/CC_Caracteristica__c/listViews/Marca_de_un_cliente_SEG.listView-meta.xml
<ListView>
    <fullName>Marca_de_un_cliente_SEG</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CC_Activo__c</columns>
    <columns>CC_Descripcion__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OS_Negocio__c</field>
        <operation>equals</operation>
        <value>SEGMENTOS</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Caracteristica__c.Marca</value>
    </filters>
    <label>Marca de un cliente SEG</label>
    <sharedTo>
        <roleAndSubordinates>SEG_Segmentos</roleAndSubordinates>
    </sharedTo>
</ListView>