force-app/main/default/objects/CC_Caracteristica__c/listViews/Marcas_CSI.listView-meta.xml
<ListView>
    <fullName>Marcas_CSI</fullName>
    <columns>NAME</columns>
    <columns>CC_Descripcion__c</columns>
    <columns>CC_Fecha_vigencia_inicio__c</columns>
    <columns>CC_Fecha_vigencia_fin__c</columns>
    <columns>CC_Activo__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Caracteristica__c.Marca</value>
    </filters>
    <filters>
        <field>OS_Negocio__c</field>
        <operation>equals</operation>
        <value>CSI_Bankia</value>
    </filters>
    <label>Marcas CSI</label>
    <sharedTo>
        <role>Contact_Center</role>
        <role>Contact_Center_sin_acceso_a_Directorio</role>
    </sharedTo>
</ListView>