force-app/main/default/objects/CC_Caracteristica__c/listViews/Marcas_en_desuso_CAM.listView-meta.xml
<ListView>
    <fullName>Marcas_en_desuso_CAM</fullName>
    <columns>CC_Activo__c</columns>
    <columns>NAME</columns>
    <columns>CC_Descripcion__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CC_Dias_ultima_asociacion__c</columns>
    <columns>CC_Fecha_Ultima_Asociacion__c</columns>
    <columns>CC_Fecha_vigencia_fin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CC_Caracteristica__c.Marca</value>
    </filters>
    <filters>
        <field>CC_Dias_ultima_asociacion__c</field>
        <operation>greaterOrEqual</operation>
        <value>180</value>
    </filters>
    <filters>
        <field>OS_Negocio__c</field>
        <operation>equals</operation>
        <value>CAM</value>
    </filters>
    <filters>
        <field>CC_Activo__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Marcas en desuso CAM</label>
    <sharedTo>
        <role>CAM</role>
    </sharedTo>
</ListView>